[project]
name = "monitory"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "python-dotenv>=1.1.1",
    "python-telegram-bot[job-queue]>=22.2",
    "requests>=2.32.4",
]
[dependency-groups]
dev = ["aider-chat[playwright]>=0.85.1"]
